make animations wait for content to load

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* haiku app stylesheet */
 
+.waitForLoad * {
+    animation-play-state: paused !important;
+}
+
 @font-face {
     font-family: Open-Sans;
     src: url(OpenSans-Regular.ttf);
