--- a/style.css
+++ b/style.css
@@ -17,6 +17,21 @@
     animation-duration: 1.5s;
 }
 
+@media (max-width: 600px) {
+    .lotus {
+        margin-right: 10vw !important;
+    }
+    .info {
+        margin-left: 20px !important;
+    }
+    .footer {
+        margin-top: 20px;
+    }
+    .footer-link {
+        margin-left: 20px !important;
+    }
+}
+
 @keyframes fade-in {
     from {opacity: 0;}
     to {opacity: 1;}
@@ -36,18 +51,18 @@
     text-align: center;
     color: whitesmoke;
     background-color: rgb(145, 145, 145);
-    margin: 0px 100px 0px 100px ;
+    margin: 0px 8vw 0px 8vw;
     padding: 8px 0px 10px 0px;
 }
 
 .haiku {
-    margin: 35px 0px 20px 250px;
+    margin: 35px 0px 20px 20vw;
     padding: 25px 25px 25px 25px;
     background-color: rgba(146, 215, 255, 0.925);
 }
 
 .lotus {
-    margin: 50px 350px 0px 0px;
+    margin: 50px 20vw 0px 0px;
     padding: 30px 0px 30px 0px;
     background-color: #fbb8c2;
     border-radius: 0% 100px 100px 0px;
